fixes / windows action

--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -24,3 +24,5 @@ add_executable(SkoreRuntimeTests ${SKORE_RUNTIME_TESTS_SOURCES})
 target_link_libraries(SkoreRuntimeTests PUBLIC SkoreRuntime)
 target_include_directories(SkoreRuntimeTests PUBLIC Thirdparty/doctest)
 target_include_directories(SkoreRuntimeTests PUBLIC Tests)
+
+add_test(NAME SkoreRuntimeTests COMMAND SkoreRuntimeTests)
