--- a/.github/workflows/windows-msvc-build.yml
+++ b/.github/workflows/windows-msvc-build.yml
@@ -17,5 +17,5 @@ jobs:
           mkdir build
           cd build
           cmake ..
-          cmake --build . --target all
+          cmake --build .
           ctest --verbose -C Debug
